--- a/package.json
+++ b/package.json
@@ -23,34 +23,33 @@
   "scripts": {
     "all": "npm pack && npm test",
     "prepack": "tsc",
-    "test": "jest",
+    "test": "node test-runner.js",
+    "test:ci": "jest --ci --testTimeout=30000 --maxWorkers=1 --coverage",
+    "test:simple": "node test-simple-ci.js",
     "semantic-release": "semantic-release",
     "prepare": "husky",
     "build": "tsc"
   },
   "dependencies": {
-    "execa": "^9.6.1",
-    "fs-extra": "^11.3.2",
+    "execa": "^7.1.1",
+    "fs-extra": "^11.1.1",
     "promisified-properties": "^3.0.0",
     "split2": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.28.5",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
-    "@types/execa": "^0.9.0",
-    "@types/fs-extra": "^11.0.4",
-    "@types/semantic-release": "^21.1.0",
+    "@types/fs-extra": "^11.0.0",
+    "@types/jest": "^29.5.0",
     "@types/signale": "1.4.7",
     "@types/split2": "4.2.3",
     "husky": "9.1.7",
-    "jest": "^30.2.0",
-    "jest-esm-transformer": "^1.0.0",
+    "jest": "30.2.0",
     "lint-staged": "16.2.7",
     "prettier": "3.7.3",
     "rimraf": "6.1.2",
     "semantic-release": "25.0.2",
-    "ts-jest": "^29.4.5",
+    "ts-jest": "29.4.5",
     "typescript": "5.9.3"
   },
   "engines": {
